@startuml ZuzmaraVaros_ClassDiagram_v2
skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam classHeaderBackgroundColor #D5E8F0
skinparam classBorderColor #2E75B6
skinparam arrowColor #1F3864
skinparam backgroundColor #FFFFFF
skinparam groupInheritance 2

' ─────────────────────────────────────────
'  GAME / CORE
'  Game csak vékony koordinátor:
'  - NextRound() hívja a Player.TakeTurn()-öket
'  - majd City.ExecuteStep()-et
' ─────────────────────────────────────────

class Game {
  - city: City
  - players: List<Player>
  - roundNumber: int
  +Start(playerCount: int, playerTypes: List<PlayerType>): void
  +NextRound(): void
  +IsGameOver(): boolean
}

' ─────────────────────────────────────────
'  MAP / TOPOLOGY
'  City.ExecuteStep() lépteti a járműveket/hóekéket
'  és alkalmazza a hóesést (ApplySnowfall)
' ─────────────────────────────────────────

class City {
  - intersections: List<Intersection>
  - roads: List<Road>
  +ExecuteStep(): void
  +GetShortestPath(from: Node, to: Node): List<Lane>
  +ApplySnowfall(amount: int): void
  +GetNeighborRoads(node: Node): List<Road>
  +GetAllLanes(): List<Lane>
  +GetAllVehicles(): List<Vehicle>
}

abstract class Node {
  +GetConnectedRoads(): List<Road>
}

class Intersection extends Node {
  - connectedRoads: List<Road>
  +AddRoad(road: Road): void
}

class Terminal extends Node {
  +NotifyArrival(bus: Bus): void
}

class Home extends Node {}

class Workplace extends Node {}

class Road {
  - from: Node
  - to: Node
  - lanes: List<Lane>
  +GetLanes(): List<Lane>
  +GetLane(index: int): Lane
  +GetNeighborLane(lane: Lane, direction: Direction): Lane
  +GetOtherEnd(node: Node): Node
  +ApplySnow(amount: int): void
  +GetPassableLanes(): List<Lane>
}

class Lane {
  - state: LaneState
  - vehicles: List<Vehicle>
  - snowPlow: SnowPlow
  - saltCountdown: int
  - passageCount: int
  +Accept(v: Vehicle): void
  +Accept(s: SnowPlow): void
  +AddSnow(amount: int): void
  +ApplySalt(): void
  +FormIce(): void
  +IsPassable(): boolean
  +IsSlippery(): boolean
  +GetState(): LaneState
  +RegisterPassage(v: Vehicle): void
  +CleanWith(plow: SnowPlow): void
  +SetBlocked(turns: int): void
}

' ─────────────────────────────────────────
'  LANE STATES  (State pattern)
' ─────────────────────────────────────────

abstract class LaneState {
  +OnSnowAdded(lane: Lane, amount: int): void
  +OnSaltApplied(lane: Lane): void
  +OnIceFormed(lane: Lane): void
  +IsPassable(): boolean
  +IsSlippery(): boolean
  +CanBePushed(): boolean
}

class ClearState extends LaneState {}
class ThinSnowState extends LaneState {
  - snowThickness: int
}
class ThickSnowState extends LaneState {
  - snowThickness: int
}
class IcyState extends LaneState {}
class BrokenIceState extends LaneState {
  - iceThickness: int
}

' ─────────────────────────────────────────
'  VEHICLES  (double dispatch)
'  Minden jármű maga lép - City.ExecuteStep()
'  csak meghívja a Step()-et mindenkire
' ─────────────────────────────────────────

abstract class Vehicle {
  - currentLane: Lane
  - blockedTurns: int
  +Step(): void
  +MeetVehicle(v: Vehicle): void
  +IsBlocked(): boolean
  +GetCurrentLane(): Lane
  +DecrementBlock(): void
}

class Car extends Vehicle {
  - home: Home
  - workplace: Workplace
  +GetNextLane(roads: List<Road>): Lane
  +SwitchLane(road: Road): boolean
}

class Bus extends Vehicle {
  - terminalStart: Terminal
  - terminalEnd: Terminal
  - completedRounds: int
  +ArrivedAtTerminal(): void
  +GetCompletedRounds(): int
  +IsRouteComplete(): boolean
}

' ─────────────────────────────────────────
'  SNOW PLOW
' ─────────────────────────────────────────

class SnowPlow {
  - currentLane: Lane
  - head: CleanerHead
  - owner: CleanerPlayer
  +MoveTo(lane: Lane): void
  +ChangeHead(newHead: CleanerHead): void
  +GetCurrentLane(): Lane
  +GetHead(): CleanerHead
  +ExecuteClean(): void
}

' ─────────────────────────────────────────
'  CLEANER HEADS  (Strategy pattern)
' ─────────────────────────────────────────

abstract class CleanerHead {
  +Clean(lane: Lane): void
  +IsOperational(): boolean
}

class SweepHead extends CleanerHead {}
class ThrowHead extends CleanerHead {}
class IceBreakerHead extends CleanerHead {}

class SaltHead extends CleanerHead {
  - salt: int
  +Refuel(amount: int): void
}

class DragonHead extends CleanerHead {
  - kerosene: int
  +Refuel(amount: int): void
}

' ─────────────────────────────────────────
'  PLAYERS
'  TakeTurn() a játékos saját döntése,
'  Game csak meghívja, nem irányítja
' ─────────────────────────────────────────

abstract class Player {
  - name: String
  +TakeTurn(): void
  +GetName(): String
}

class BusDriver extends Player {
  - bus: Bus
}

class CleanerPlayer extends Player {
  - balance: int
  - plows: List<SnowPlow>
  +DirectPlow(plow: SnowPlow, lane: Lane): void
  +BuyHead(plow: SnowPlow, head: CleanerHead): void
  +BuyFuel(plow: SnowPlow, fuelType: FuelType, amount: int): void
  +BuyNewPlow(): void
  +ReceivePayment(amount: int): void
  +GetBalance(): int
}

' ─────────────────────────────────────────
'  ENUMS
' ─────────────────────────────────────────

enum FuelType {
  SALT
  KEROSENE
}

enum Direction {
  LEFT
  RIGHT
}

enum PlayerType {
  BUS_DRIVER
  CLEANER
}

' ─────────────────────────────────────────
'  RELATIONSHIPS
' ─────────────────────────────────────────

' Game - vékony koordinátor
Game "1" *--> "1" City
Game "1" *--> "1..*" Player

' City / topology
City "1" *--> "1..*" Road
City "1" *--> "1..*" Node
Road "1" *--> "1..*" Lane
Road "1" --> "2" Node
Lane "1" --> "1" LaneState
Lane "0..1" --> "0..*" Vehicle
Lane "0..1" --> "0..1" SnowPlow

' Vehicles
Car "1" --> "1" Home
Car "1" --> "1" Workplace
Bus "1" --> "2" Terminal

' SnowPlow
SnowPlow "1" --> "1" CleanerHead
CleanerPlayer "1" --> "1..*" SnowPlow
BusDriver "1" --> "1" Bus

' FuelType
SaltHead ..> FuelType
DragonHead ..> FuelType
CleanerPlayer ..> FuelType

' Direction
Road ..> Direction

@enduml
